fix: make order item operations idempotent and stabilize order tests